资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2/32bit/MT_API.pas

unit MT_API;
//**************************************************//
// V3.16.0 updated 2017-01-30
//**************************************************//
interface
//==================================================
//运行环境
//===================================================
//dll版本
//初始化窗口
function MT_Init():Integer;stdcall;external 'MT_API.dll'
//关闭窗口
function MT_DeInit():Integer;stdcall;external 'MT_API.dll'
//获取dll版本号
function MT_Get_Dll_Version(sVer:PPChar):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Thread_Timeout(ms:Cardinal):Integer;stdcall;external 'MT_API.dll'

//======================================================
//通信口
//======================================================
//打开 UART
function MT_Open_UART(sCOM:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
function MT_Open_UART_Unicode(sCOM:PChar):Integer;stdcall;external 'MT_API.dll'
//关闭 UART
function MT_Close_UART():Integer;stdcall;external 'MT_API.dll'
//打开USB
function MT_Open_USB:Integer;stdcall;external 'MT_API.dll'
//关闭USB
function MT_Close_USB:Integer;stdcall;external 'MT_API.dll'

//打开网口
function MT_Open_Net(IP0,IP1,IP2,IP3:Byte;IPPort:Word):Integer;stdcall;external 'MT_API.dll'
//关闭网口
function MT_Close_Net():Integer;stdcall;external 'MT_API.dll'

//=====================================================
//板卡检测
//=====================================================
//检测设备
function MT_Check():Integer;stdcall;external 'MT_API.dll'
//读取资源模块
function MT_Get_Product_Resource(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//获取ID
function MT_Get_Product_ID(sID:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
//获取SN
function MT_Get_Product_SN(sSN:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Product_SN2(sSN:PByte):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Product_SN3(sSN:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
//读取固件版本号
function MT_Get_Product_Version(pMajor:PInteger;pMinor:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Product_Version2(pMajor:PInteger;pMinor:PInteger;
   pRelease:PInteger;pBuild:PInteger):Integer;stdcall;external 'MT_API.dll'
//===================================================================
//板卡温度
//===================================================================
//获取温度
//function MT_Get_Board_Temperature(pValue:PDouble):Integer;stdcall;external 'MT_API.dll'

//===================================================================
//电机相关
//====================================================================
//轴数
function MT_Get_Axis_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取加速度
function MT_Get_Axis_Acc(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置加速度
function MT_Set_Axis_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//读取加速度
function MT_Get_Axis_Dec(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置加速度
function MT_Set_Axis_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//读取工作模式
function MT_Get_Axis_Mode(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置速度模式
function MT_Set_Axis_Mode_Velocity(AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置位置模式
function MT_Set_Axis_Mode_Position(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Mode_Position_Open(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Mode_Position_Close(AObj:Word):Integer;stdcall;external 'MT_API.dll'
//读取速度模式目标速度
function MT_Get_Axis_Velocity_V_Target(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置速度模式目标速度
function MT_Set_Axis_Velocity_V_Target_Abs(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置速度模式目标速度
function MT_Set_Axis_Velocity_V_Target_Rel(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//停止速度模式
function MT_Set_Axis_Velocity_Stop(AObj:Word):Integer;stdcall;external 'MT_API.dll'

//读取位置模式最大速度
function MT_Get_Axis_Position_V_Max(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置位置模式最大速度
function MT_Set_Axis_Position_V_Max(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//读取位置模式目标
function MT_Get_Axis_Position_P_Target(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置位置模式目标
function MT_Set_Axis_Position_P_Target_Abs(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Position_P_Target_Rel(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//停止位置模式
function MT_Set_Axis_Position_Stop(AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置编码器比例,用在减速判断上
function MT_Set_Axis_Position_Close_Dec_Factor(AObj:Word;AFactor:Single):Integer;stdcall;external 'MT_API.dll'

//紧急停止
function MT_Set_Axis_Halt(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Halt_All():Integer;stdcall;external 'MT_API.dll'

//////////////////////////////////////////////////////////////
///  状态相关
///  //////////////////////////////////////////////////////
//读取当前速度
function MT_Get_Axis_V_Now(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取当前软件位置
function MT_Get_Axis_Software_P_Now(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Software_P(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status(AObj:Word;
            pRun:PByte;
            pDir:PByte;
            pNeg:PByte;
            pPos:PByte;
            pZero:PByte;
            pMode:PByte):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status2(AObj:Word;
            pRun:PInteger;
            pDir:PInteger;
            pNeg:PInteger;
            pPos:PInteger;
            pZero:PInteger;
            pMode:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status_Run(AObj:Word;
            pRun:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status_Dir(AObj:Word;
            pDir:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status_Neg(AObj:Word;
            pNeg:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status_Pos(AObj:Word;
            pPos:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status_Zero(AObj:Word;
            pZero:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status_Mode(AObj:Word;
            pMode:PInteger):Integer;stdcall;external 'MT_API.dll'
////////////////////////////////////////////////////////////////////////
//存储器
//读取存储器长度
function MT_Get_Param_Mem_Len(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取存储器数据
function MT_Get_Param_Mem_Data(AObj:Word;pValue:PByte):Integer;stdcall;external 'MT_API.dll'
//设置存储器数据
function MT_Set_Param_Mem_Data(AObj:Word;Value:Byte):Integer;stdcall;external 'MT_API.dll'
////////////////////////////////////////////////////////////////////////
//系统存储器
//读取存储器长度
function MT_Get_System_Mem_Len(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取存储器数据
function MT_Get_System_Mem_Data(AObj:Word;pValue:PByte):Integer;stdcall;external 'MT_API.dll'
//设置存储器数据
function MT_Set_System_Mem_Data(AObj:Word;Value:Byte):Integer;stdcall;external 'MT_API.dll'
//光隔输入
function MT_Get_Optic_In_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Optic_In_Basic_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Optic_In_Single(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Optic_In_All(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//光隔输出
function MT_Get_Optic_Out_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Optic_Out_Single(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Optic_Out_All(Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Optic_Out_Single(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Optic_Out_All(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//OC输出
function MT_Get_OC_Out_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Set_OC_Out_Single(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_OC_Out_All(Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Get_OC_Out_Single(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_OC_Out_All(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置0位模式
function MT_Set_Axis_Mode_Home(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Mode_Home_Home_Switch(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Mode_Home_Encoder_Index(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Mode_Home_Encoder_Home_Switch(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Mode_Home_Home_Zero(AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置0位模式目标速度
function MT_Set_Axis_Home_V(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//停止0位模式
function MT_Set_Axis_Home_Stop(AObj:Word):Integer;stdcall;external 'MT_API.dll'


//软件限位
//设置软件限位值
function MT_Set_Axis_Software_Limit_Neg_Value
   (AObj:Word;Value:Integer):Integer;stdcall; external 'MT_API.dll'
//设置软件限位值
function MT_Set_Axis_Software_Limit_Pos_Value
   (AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//使能软件限位模式
function MT_Set_Axis_Software_Limit_Enable(AObj:Word):Integer;stdcall;external 'MT_API.dll'
//停止软件限位模式
function MT_Set_Axis_Software_Limit_Disable(AObj:Word):Integer;stdcall;external 'MT_API.dll'
//直线插补相关
//设置直线插补主轴及速度
function MT_Set_Axis_Line_Axis(AObj:Word;Axis_ID0,Axis_ID1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补加速度
function MT_Set_Axis_Line_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补减速度
function MT_Set_Axis_Line_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补速度
function MT_Set_Axis_Line_V(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补启动
function MT_Set_Axis_Line_Run(AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置直线插补停止
function MT_Set_Axis_Line_Stop(AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置直线插补急停
function MT_Set_Axis_Line_Halt(AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置直线插补相对移动目标
function MT_Set_Axis_Line_Rel(AObj:Word;
    Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补绝对移动目标
function MT_Set_Axis_Line_Abs(AObj:Word;
    Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补启动
function MT_Set_Axis_Line_Run_Rel(AObj:Word;
    Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Line_Run_Abs(AObj:Word;
    Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
//读取直线插补模块
function MT_Get_Axis_Line_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补运动状态
function MT_Get_Axis_Line_Status(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补轴
function MT_Get_Axis_Line_Axis(AObj:Word;pID0,pID1:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补加速度
function MT_Get_Axis_Line_Acc(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补减速度
function MT_Get_Axis_Line_Dec(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补速度
function MT_Get_Axis_Line_V(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//AD输入
function MT_Get_AD_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_AD_Data(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Board_T(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
